--- a/index.html
+++ b/index.html
@@ -73,27 +73,68 @@
                             <div class="row  ">
 
                                 <div class="col-3">
-                                    <img src="./src/office.png" style="width: 5rem;" class="card-img-top" alt="..."><br>
-                                    <a href="#" style="font-size: 0.8rem;" class="btn btn-outline-info">DOWNLOAD</a>
+
+                                    <div class="card bg-transparent text-center" style="width: 5rem;">
+                                        <img src="./src/office.png" style="width: 7rem;" class="card-img-top rounded"
+                                            alt="...">
+                                        <div class="card-body  d-grid gap-2">
+                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+                                        </div>
+                                    </div>
+
                                 </div>
 
                                 <div class="col-3">
-                                    <img src="./src/office.png" style="width: 5rem;" class="card-img-top" alt="..."><br>
-                                    <a href="#" style="font-size: 0.8rem;" class="btn btn-outline-info">DOWNLOAD</a>
+
+                                    <div class="col-3">
+
+                                        <div class="card bg-transparent text-center" style="width: 5rem;">
+                                            <img src="./src/office.png" style="width: 7rem;"
+                                                class="card-img-top rounded" alt="...">
+                                            <div class="card-body  d-grid gap-2">
+                                                <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                                <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
                                 </div>
 
                                 <div class="col-3">
-                                    <img src="./src/office.png" style="width: 5rem;" class="card-img-top" alt="..."><br>
-                                    <a href="#" style="font-size: 0.8rem;" class="btn btn-outline-info">DOWNLOAD</a>
+
+                                    <div class="col-3">
+
+                                        <div class="card bg-transparent text-center" style="width: 5rem;">
+                                            <img src="./src/office.png" style="width: 7rem;"
+                                                class="card-img-top rounded" alt="...">
+                                            <div class="card-body  d-grid gap-2">
+                                                <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                                <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
                                 </div>
 
                                 <div class="col-3">
-                                    <img src="./src/office.png" style="width: 5rem;" class="card-img-top" alt="..."><br>
-                                    <a href="#" style="font-size: 0.8rem;" class="btn btn-outline-info">DOWNLOAD</a>
+
+                                    <div class="col-3">
+
+                                        <div class="card bg-transparent text-center" style="width: 5rem;">
+                                            <img src="./src/office.png" style="width: 7rem;"
+                                                class="card-img-top rounded" alt="...">
+                                            <div class="card-body  d-grid gap-2">
+                                                <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                                <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
                                 </div>
-
-
-
 
 
 
@@ -206,7 +247,7 @@
                         <h3>OUTROS</h3>
                         <br>
                         <div class="container d-md-grid">
-                            <div class="row  ">
+                            <div class="row text-center ">
 
                                 <div class="col-3">
                                     <img src="./src/office.png" style="width: 5rem;" class="card-img-top" alt="..."><br>
