--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Cripa - Informatica</title>
 </head>
 
-<body id="bd" class=" bg-dark font-monospace text-light ">
+<body id="bd" class=" bg-black bg-dark font-monospace text-light ">
 
     <!-- HEADER-->
 
@@ -57,45 +57,34 @@
     <main class="">
 
 
-        <div class="accordion collapsed" id="accordionExample">
+        <div class="accordion collapsed  bg-gradient " id="accordionExample">
 
-            <!-- FIM HEADER-->
+
             <div class="accordion-item  bg-transparent ">
 
                 <div id="collapseOne" class="accordion-collapse collapse show  " aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
 
-                    <div class="accordion-body ">
+                    <div class="accordion-body   bg-gradient">
 
                         <h3>PROGRAMAS</h3>
                         <br>
-                        <div class="container d-md-grid">
-                            <div class="row  ">
+                        <div class="container  ">
+                            <div class="row bg-transparent  ">
+
 
                                 <div class="col-3">
+                                    <!-- OFFICE -->
+                                    <div class="col-3">
 
-                                    <div class="card bg-transparent text-center" style="width: 5rem;">
-                                        <img src="./src/office.png" style="width: 7rem;" class="card-img-top rounded"
-                                            alt="...">
-                                        <div class="card-body  d-grid gap-2">
+
+                                        <img src="./src/office.png" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center d-grid gap-2">
+
                                             <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
                                             <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
-                                        </div>
-                                    </div>
 
-                                </div>
-
-                                <div class="col-3">
-
-                                    <div class="col-3">
-
-                                        <div class="card bg-transparent text-center" style="width: 5rem;">
-                                            <img src="./src/office.png" style="width: 7rem;"
-                                                class="card-img-top rounded" alt="...">
-                                            <div class="card-body  d-grid gap-2">
-                                                <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
-                                                <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
-                                            </div>
                                         </div>
 
                                     </div>
@@ -103,16 +92,33 @@
                                 </div>
 
                                 <div class="col-3">
-
+                                    <!-- HARD DISK SENTINEL -->
                                     <div class="col-3">
 
-                                        <div class="card bg-transparent text-center" style="width: 5rem;">
-                                            <img src="./src/office.png" style="width: 7rem;"
-                                                class="card-img-top rounded" alt="...">
-                                            <div class="card-body  d-grid gap-2">
-                                                <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
-                                                <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
-                                            </div>
+
+                                        <img src="./src/hds.jpg" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center   d-grid gap-2">
+                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-3 ">
+
+                                    <div class="col-3 ">
+                                        <!-- CCLEANER PRO -->
+
+                                        <img src="./src/ccleaner.jpg" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center   d-grid gap-2">
+                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+
                                         </div>
 
                                     </div>
@@ -120,23 +126,90 @@
                                 </div>
 
                                 <div class="col-3">
-
+                                    <!-- AIDA64 -->
                                     <div class="col-3">
 
-                                        <div class="card bg-transparent text-center" style="width: 5rem;">
-                                            <img src="./src/office.png" style="width: 7rem;"
-                                                class="card-img-top rounded" alt="...">
-                                            <div class="card-body  d-grid gap-2">
-                                                <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
-                                                <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
-                                            </div>
+
+                                        <img src="./src/aida.jpg" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center   d-grid gap-2">
+
+                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+
                                         </div>
 
                                     </div>
 
                                 </div>
 
+                                <div class="col-3 ">
 
+                                    <div class="col-3 ">
+                                        <!-- MEDICAT USB TOOL -->
+
+                                        <img src="./src/medcat.png" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center   d-grid gap-2">
+                                            <a href="#"  class="btn disabled btn-sm btn-outline-info" target="_blank" >ATIVADOR</a>
+                                            <a href="https://url.gratis/Rwqixy" target="_blank" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-3 ">
+
+                                    <div class="col-3 ">
+                                        <!--  -->
+
+                                        <img src="./src/ccleaner.jpg" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center   d-grid gap-2">
+                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-3 ">
+
+                                    <div class="col-3 ">
+                                        <!--  -->
+
+                                        <img src="./src/ccleaner.jpg" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center   d-grid gap-2">
+                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-3 ">
+
+                                    <div class="col-3 ">
+                                        <!--  -->
+
+                                        <img src="./src/ccleaner.jpg" style="width: 7rem; height: 4rem;"
+                                            class="card-img-top rounded border border-info border-2">
+                                        <div class="card-body text-center   d-grid gap-2">
+                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
 
 
                             </div>
@@ -156,8 +229,8 @@
                     <div class="accordion-body ">
                         <h3>BIOS</h3>
                         <br>
-                        <div class="container d-md-grid">
-                            <div class="row  ">
+                        <div class="container">
+                            <div class="row ">
 
                                 <div class="col-3">
                                     <img src="./src/office.png" style="width: 5rem;" class="card-img-top" alt="..."><br>
