--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Cripa - Informatica</title>
 </head>
 
-<body id="bd" class=" bg-black bg-dark font-monospace text-light ">
+<body id="bd" class="  bg-dark font-monospace text-light ">
 
     <!-- HEADER-->
 
@@ -57,7 +57,7 @@
     <main class="">
 
 
-        <div class="accordion collapsed  bg-gradient " id="accordionExample">
+        <div class="accordion collapsed   " id="accordionExample">
 
 
             <div class="accordion-item  bg-transparent ">
