--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
                                             class="card-img-top rounded border border-info border-2">
                                         <div class="card-body text-center d-grid gap-2">
 
-                                            <a href="#" class="btn  btn-sm btn-outline-info">ATIVADOR</a>
-                                            <a href="#" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+                                            <a href="https://drive.google.com/file/d/1qRZensAMsvPeKKb70XLTzxWuqjs0TmpI/view?usp=sharing"
+                                                class="btn  btn-sm btn-outline-info">ATIVADOR</a>
+                                            <a href="http://tiny.cc/1o8quz"
+                                                class="btn btn-sm btn-outline-info">DOWNLOAD</a>
 
                                         </div>
 
@@ -151,8 +153,10 @@
                                         <img src="./src/medcat.png" style="width: 7rem; height: 4rem;"
                                             class="card-img-top rounded border border-info border-2">
                                         <div class="card-body text-center   d-grid gap-2">
-                                            <a href="#"  class="btn disabled btn-sm btn-outline-info" target="_blank" >ATIVADOR</a>
-                                            <a href="https://url.gratis/Rwqixy" target="_blank" class="btn btn-sm btn-outline-info">DOWNLOAD</a>
+                                            <a href="#" class="btn disabled btn-sm btn-outline-info"
+                                                target="_blank">ATIVADOR</a>
+                                            <a href="https://url.gratis/Rwqixy" target="_blank"
+                                                class="btn btn-sm btn-outline-info">DOWNLOAD</a>
 
                                         </div>
 
